Added JWT auth, booking relationships, API fixes